cot-macros/tests/ui/func_query_invalid_field.stderr
error[E0599]: no associated function or constant named `nonexistent` found for struct `MyModelFields` in the current scope
  --> tests/ui/func_query_invalid_field.rs:16:10
   |
 4 |   #[model]
   |   -------- associated function or constant `nonexistent` not found for this struct
...
14 | /     query!(
15 | |         MyModel,
16 | |         $nonexistent == 42
   | |         -^^^^^^^^^^^ associated function or constant not found in `MyModelFields`
   | |_________|
   |
